--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,6 @@ rust:
 matrix:
   allow_failures:
     - rust: nightly
+script:
+  - RUST_BACKTRACE=1 cargo build --verbose
+  - RUST_BACKTRACE=1 cargo test --verbose
